package com.zaozhuang.newborn.event;

import mangogo.appbase.eventbus.BaseEvent;

public class BabyRefreshEvent extends BaseEvent {
}
