package com.zaozhuang.newborn.event;

import mangogo.appbase.eventbus.BaseEvent;

public class BabySelEvent extends BaseEvent {
}
