package com.zaozhuang.newborn.event;

import mangogo.appbase.eventbus.BaseEvent;

public class LoginEvent extends BaseEvent {
}
