@startuml

title __EVENT's Class Diagram__\n

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace event {
        class com.zaozhuang.newborn.event.BabyRefreshEvent {
        }
      }
    }
  }
  

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace event {
        class com.zaozhuang.newborn.event.BabySelEvent {
        }
      }
    }
  }
  

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace event {
        class com.zaozhuang.newborn.event.LoginEvent {
        }
      }
    }
  }
  

  com.zaozhuang.newborn.event.BabyRefreshEvent -up-|> mangogo.appbase.eventbus.BaseEvent
  com.zaozhuang.newborn.event.BabySelEvent -up-|> mangogo.appbase.eventbus.BaseEvent
  com.zaozhuang.newborn.event.LoginEvent -up-|> mangogo.appbase.eventbus.BaseEvent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
